@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add environment override ALIEN_MSYS_INSTALL_TYPE, ALIEN_INSTALL_TYPE
 
 0.07      2014-05-15 09:17:18 -0400
   - fix reinstall bug (GH#3)
